--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "js-md5": "^0.8.3",
-    "mongodb": "^6.3.0",
-    "next": "14.2.21",
-    "react": "^18",
-    "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "mongodb": "^6.15.0",
+    "next": "^15.2.4",
+    "react": "^19",
+    "react-dom": "^19",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "5.3.3"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.2"
   }
 }
